--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,9 @@
     <color name="colorYellow">#f1c131</color>
     <color name="colorWhite">#ffffff</color>
     <color name="BlurbColor">#a0a0a0</color>
+    <color name="colorShadow">#7F000000</color>
+    <color name="colorShadowDark">#FFFFFF</color>
+
+
 
 </resources>
