--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:fontFamily">@font/frecklefaceregular"</item>
+        <item name="android:fontFamily">@font/freckleface</item>
 
     </style>
 
@@ -58,9 +58,9 @@
         <item name="android:visibility">visible</item>
 
         <item name= "android:shadowColor">@color/colorDarkGreen</item>
-        <item name= "android:shadowDx">1</item>
-        <item name= "android:shadowDy">1</item>
-        <item name= "android:shadowRadius">2</item>
+        <item name= "android:shadowDx">3</item>
+        <item name= "android:shadowDy">2</item>
+        <item name= "android:shadowRadius">3</item>
 
     </style>
 
@@ -74,7 +74,7 @@
         <item name="android:visibility">visible</item>
 
         <item name= "android:shadowColor">@color/colorShadow</item>
-        <item name= "android:shadowDx">1</item>
+        <item name= "android:shadowDx">2</item>
         <item name= "android:shadowDy">1</item>
         <item name= "android:shadowRadius">2</item>
 
@@ -87,47 +87,52 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:paddingBottom">5dp</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Display1</item>
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:visibility">visible</item>
+        <item name="android:fontFamily">sans-serif-condensed-medium</item>
 
-        <item name= "android:shadowColor">@color/colorShadowDark</item>
+        <item name= "android:shadowColor">@color/colorShadow</item>
         <item name= "android:shadowDx">1</item>
         <item name= "android:shadowDy">1</item>
-        <item name= "android:shadowRadius">2</item>
+        <item name= "android:shadowRadius">1</item>
     </style>
 
     <style name="TextPoints" parent="android:Widget.TextView">
         <item name="android:breakStrategy">simple</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_gravity">center_horizontal</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Display1</item>
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:textStyle">bold</item>
         <item name="android:visibility">visible</item>
+        <item name="android:fontFamily">sans-serif-condensed-medium</item>
 
-        <item name= "android:shadowColor">@color/colorShadowDark</item>
+
+        <item name= "android:shadowColor">@color/colorShadow</item>
         <item name= "android:shadowDx">1</item>
         <item name= "android:shadowDy">1</item>
-        <item name= "android:shadowRadius">2</item>
+        <item name= "android:shadowRadius">1</item>
     </style>
+
     <style name="TextPowerups" parent="android:Widget.TextView">
         <item name="android:breakStrategy">simple</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_horizontal</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Display1</item>
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:visibility">visible</item>
+        <item name="android:fontFamily">sans-serif-condensed-medium</item>
 
-        <item name= "android:shadowColor">@color/colorShadowDark</item>
+        <item name= "android:shadowColor">@color/colorShadow</item>
         <item name= "android:shadowDx">1</item>
         <item name= "android:shadowDy">1</item>
-        <item name= "android:shadowRadius">2</item>
+        <item name= "android:shadowRadius">1</item>
     </style>
 
     <style name="LinearRowLayout">
