Finished loading screen
Loading screen with dynamic loading circle. Needs to be used, but yet to decided where to use it.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorYellow</item>
         <item name="android:fontFamily">@font/freckleface</item>
 
     </style>
