Adjust xml to match for entire game

--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -20,6 +20,8 @@
         <TextView
             android:layout_marginTop="250dp"
             style="@style/TextHeaders"
+            android:textColor="@color/colorYellow"
+            android:shadowColor="@color/colorDarkGreen"
             android:text="@string/loading_header"/>
 
         <ProgressBar
