--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,8 +7,8 @@
         <item name="windowActionBar">false</item>
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/colorYellow</item>
+        <item name="colorPrimaryDark">@color/colorDarkGreen</item>
         <item name="colorAccent">@color/colorYellow</item>
         <item name="android:fontFamily">@font/freckleface</item>
 
@@ -54,13 +54,13 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:textSize">38sp</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Display2</item>
-        <item name="android:textColor">@color/colorYellow</item>
+        <item name="android:textColor">@color/colorDarkGreen</item>
         <item name="android:visibility">visible</item>
 
-        <item name= "android:shadowColor">@color/colorDarkGreen</item>
-        <item name= "android:shadowDx">3</item>
-        <item name= "android:shadowDy">2</item>
-        <item name= "android:shadowRadius">3</item>
+        <item name= "android:shadowColor">@color/colorYellow</item>
+        <item name= "android:shadowDx">-3</item>
+        <item name= "android:shadowDy">-2</item>
+        <item name= "android:shadowRadius">7</item>
 
     </style>
 
@@ -70,13 +70,13 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:textSize">25sp</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Display2</item>
-        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textColor">@color/colorDarkGreen</item>
         <item name="android:visibility">visible</item>
 
-        <item name= "android:shadowColor">@color/colorShadow</item>
-        <item name= "android:shadowDx">2</item>
-        <item name= "android:shadowDy">1</item>
-        <item name= "android:shadowRadius">2</item>
+        <item name= "android:shadowColor">@color/colorYellow</item>
+        <item name= "android:shadowDx">-2</item>
+        <item name= "android:shadowDy">-2</item>
+        <item name= "android:shadowRadius">7</item>
 
     </style>
 
@@ -87,16 +87,16 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:paddingBottom">5dp</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Display1</item>
-        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textColor">@color/colorYellow</item>
         <item name="android:visibility">visible</item>
-        <item name="android:fontFamily">sans-serif-condensed-medium</item>
+        <item name="android:fontFamily">@font/freckleface</item>
 
-        <item name= "android:shadowColor">@color/colorShadow</item>
-        <item name= "android:shadowDx">1</item>
-        <item name= "android:shadowDy">1</item>
-        <item name= "android:shadowRadius">1</item>
+        <item name= "android:shadowColor">@color/colorDarkGreen</item>
+        <item name= "android:shadowDx">-2</item>
+        <item name= "android:shadowDy">-2</item>
+        <item name= "android:shadowRadius">4</item>
     </style>
 
     <style name="TextPoints" parent="android:Widget.TextView">
@@ -106,16 +106,16 @@
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Display1</item>
-        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textColor">@color/colorYellow</item>
         <item name="android:textStyle">bold</item>
         <item name="android:visibility">visible</item>
-        <item name="android:fontFamily">sans-serif-condensed-medium</item>
+        <item name="android:fontFamily">@font/freckleface</item>
 
 
-        <item name= "android:shadowColor">@color/colorShadow</item>
-        <item name= "android:shadowDx">1</item>
-        <item name= "android:shadowDy">1</item>
-        <item name= "android:shadowRadius">1</item>
+        <item name= "android:shadowColor">@color/colorDarkGreen</item>
+        <item name= "android:shadowDx">-2</item>
+        <item name= "android:shadowDy">-2</item>
+        <item name= "android:shadowRadius">4</item>
     </style>
 
     <style name="TextPowerups" parent="android:Widget.TextView">
@@ -125,14 +125,14 @@
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Display1</item>
-        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textColor">@color/colorYellow</item>
         <item name="android:visibility">visible</item>
-        <item name="android:fontFamily">sans-serif-condensed-medium</item>
+        <item name="android:fontFamily">@font/freckleface</item>
 
-        <item name= "android:shadowColor">@color/colorShadow</item>
-        <item name= "android:shadowDx">1</item>
-        <item name= "android:shadowDy">1</item>
-        <item name= "android:shadowRadius">1</item>
+        <item name= "android:shadowColor">@color/colorDarkGreen</item>
+        <item name= "android:shadowDx">-2</item>
+        <item name= "android:shadowDy">-2</item>
+        <item name= "android:shadowRadius">4</item>
     </style>
 
     <style name="LinearRowLayout">
